objects/Planet__c.object
<CustomObject>
    <fields>
        <fullName>Distance_to_Sun__c</fullName>
        <label>Distance to Sun?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Galaxy__c</fullName>
        <label>Galaxy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Milky Way</fullName>
                </value>
                <value>
                    <fullName>Eye of Sauron</fullName>
                </value>
                <value>
                    <fullName>Andromeda Galaxy</fullName>
                </value>
                <value>
                    <fullName>Cigar Galaxy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_no_Rings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has no Rings?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mass__c</fullName>
        <label>Mass</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Moon__c</fullName>
        <label>Moon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Planet</label>
    <nameField>
        <label>Planet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planets</pluralLabel>
    <recordTypes>
        <fullName>Gas_Giants</fullName>
        <active>true</active>
        <label>Gas Giants</label>
    </recordTypes>
    <recordTypes>
        <fullName>Terrestrial_Planets</fullName>
        <active>true</active>
        <label>Terrestrial Planets</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>